Aggiornata creazione delle maniglie, diviso il codice in maniera più efficiente ottimizzando anche la gestione del resize dei blocchi. Sistemato il bug che a volte il testo all'interno di un blocco con scrollbar spariva.

--- a/public/css/builderL.css
+++ b/public/css/builderL.css
@@ -1,3 +1,7 @@
+.mCustomScrollBox {
+    max-height: none !important;
+}
+
 .rexpansive_section .full-disposition.focused, .rexpansive_section .center-disposition.focused{
     overflow: visible;
 }
